@@ -12,4 +12,3 @@ pm_to_blib*
 cover_db
 pod2htm*.tmp
 Dancer-Session-MongoDB-*
-*.cache
