@@ -1,7 +1,9 @@
 name    = Dancer-Session-MongoDB
-version = 0.1
+version = 0.2
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
 
-[@IDOPEREL]
+[@Filter]
+-bundle = @IDOPEREL
+-remove = LatestPrereqs
