@@ -1,6 +1,10 @@
 Revision history for Dancer-Session-MongoDB
 
 {{$NEXT}}
+	- Now allows passing options to MongoDB::Connection's new() method
+	- BACKWORDS COMPATIBILITY BROKEN: the 'db_name' option for new()
+	  is changed to 'session_db_name'. Read the note in the new()
+	  method's documentation.
 
 0.1       2010-08-10 22:11:02 Asia/Jerusalem
 	- Initial release
